--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "package name validator",
         "semantic versioner"
     ],
-    "author": "Alexander Abashkin <monolithed@gmail.com>",
+    "author": "AA",
     "license": "MIT",
     "repository": {
         "type": "git",
